news notice, header, title and search commponents

--- a/src/Assets/Scss/variables.scss
+++ b/src/Assets/Scss/variables.scss
@@ -1,6 +1,9 @@
-$primaryBack: #f4f5f8;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+$primaryBack: #F2F2F2;
 $secondaryBack: #ffffff;
 $primaryFontColor: #1d1d1b;
 $secondaryFontColor: #488bc7;
-$primaryIconColor: #bb1e1e;
+$primaryIconColor: #BB1E1E;
 $secondaryIconColor: #7a7a7c;
+$mainFont: 'Inter';
