--- a/src/Pages/Home/home.scss
+++ b/src/Pages/Home/home.scss
@@ -1,5 +1,6 @@
 @import '../../Assets/Scss/variables.scss';
+@import '../../Assets/Scss/mixins.scss';
 
 .home-w{
-    background-color: red;
+    @include my-container;
 }
