--- a/src/Assets/Scss/mixins.scss
+++ b/src/Assets/Scss/mixins.scss
@@ -5,3 +5,19 @@
     flex-direction: $direction;
     align-items: $align;
 }
+
+@mixin my-button($backColor, $fontColor){
+    background-color: $backColor;
+    color: $fontColor;
+    text-transform: uppercase;
+    font-size: 14px;
+    padding: 10px 20px;
+    border-radius: 8px;
+    border: none;
+    font-weight: 600;
+}
+
+@mixin my-container(){
+    width: 80%;
+    margin: 0 auto;
+}
