--- a/src/Pages/Home/home.scss
+++ b/src/Pages/Home/home.scss
@@ -5,5 +5,18 @@
     @include my-container;
     .home-content{
         padding: 30px 0;
+        @include my-flex(flex-start, row, normal);
+        .home-cotent-sidebar{
+            width: 70px;
+            margin-right: 20px;
+        }
+        .home-cotent-cards{
+            .home-content-title{
+                width: 100%;
+            }
+            flex: 1;
+            @include my-flex(space-between, row, normal);
+            gap: 20px;
+        }
     }
 }
