--- a/src/Components/SideBar/side-bar.scss
+++ b/src/Components/SideBar/side-bar.scss
@@ -3,7 +3,7 @@
 
 .side-bar-w{
     @include my-flex(flex-start, column, center);
-    // background-color: aqua;
+    background-color: aqua;
     // width: 70px;
     .side-bar-box{
         @include my-flex(space-between, column, center);
