--- a/src/Components/LatestNews/latest-news.scss
+++ b/src/Components/LatestNews/latest-news.scss
@@ -4,26 +4,31 @@
 .latest-news-w{
     background-color: aqua;
     width: 321px;
-    height: 500px;
-    border-radius: 5px;
     background-color: $secondaryBack;
-    padding: 15px 10px;
+    padding: 15px 2px;
+    border-radius: 5px;
     .latest-news-header{
         @include my-flex(flex-start, row, center);
-        .dot{
-            height: 15px;
-            width: 15px;
-            background-color: red;
+        padding: 0 10px 15px;
+        .news-header-dot{
+            height: 10px;
+            width: 10px;
+            background-color: $primaryIconColor;
             border-radius: 50%;
+            outline: 5px solid #bb1e1e4d;
+        }
+        .news-header-title{
+            margin: 0 10px;
         }
     }
     .latest-news-content{
-        height: 400px;
+        height: 529px;
         overflow-y: scroll;
+        padding: 0 10px;
         .content-card{
             // background-color: red;
             padding: 10px 0;
-            border-bottom: 1px solid $secondaryFontColor;
+            border-bottom: 1px solid #97979741;
             .content-card-time{
                 color: $secondaryFontColor;
                 font-size: 10px;
@@ -32,9 +37,14 @@
             .content-card-title{
                 font-weight: 500;
                 font-size: 16px;
+                margin: 5px 0;
             }
         }
     }
     .latest-news-footer{
+        padding: 15px 10px 0;
+        color: $secondaryFontColor;
+        font-weight: 500;
+        cursor: pointer;
     }
 }
