--- a/src/Pages/Home/home.scss
+++ b/src/Pages/Home/home.scss
@@ -11,7 +11,7 @@
             margin-right: 20px;
         }
         .home-cotent-cards{
-            .home-content-title{
+            .content-title{
                 width: 100%;
             }
             flex: 1;
