--- a/src/Components/SideBar/side-bar.scss
+++ b/src/Components/SideBar/side-bar.scss
@@ -22,5 +22,9 @@
             background-color: $secondaryBack;
             color: $primaryIconColor;
         }
+        &:hover{
+            color: $primaryIconColor;
+            // background-color: $secondaryBack;
+        }
     }
 }
