using data to create news cards

--- a/src/Pages/Home/home.scss
+++ b/src/Pages/Home/home.scss
@@ -18,6 +18,7 @@
             .content-title{
                 grid-column: span 3;
                 margin: 5px 0;
+                text-transform: capitalize;
             }
             .content-latest{
                 grid-row: span 2;
