all latest news content

--- a/src/Assets/Scss/variables.scss
+++ b/src/Assets/Scss/variables.scss
@@ -7,3 +7,4 @@ $secondaryFontColor: #488bc7;
 $primaryIconColor: #BB1E1E;
 $secondaryIconColor: #7a7a7c;
 $mainFont: 'Inter';
+$transition: .3s ease-in;
