--- a/src/Components/CardNews/card-news.scss
+++ b/src/Components/CardNews/card-news.scss
@@ -57,7 +57,7 @@
     .news-breaking{
         min-width: 320px;
         height: 300px;
-        background-color: rgba(0, 0, 0, 0.603);
+        background-color: #1D1D1B;
         border-radius: 5px;
         color: $secondaryBack;
         text-align: center;
