sidebar meni icons

--- a/src/Components/Search/search.scss
+++ b/src/Components/Search/search.scss
@@ -14,6 +14,7 @@
         .search-icon{
             margin-left: 15px;
             color: $secondaryIconColor;
+            font-size: 20px;
         }
         .search-input{
             border: none;
