--- a/src/Components/SideBar/side-bar.scss
+++ b/src/Components/SideBar/side-bar.scss
@@ -6,14 +6,14 @@
     .side-bar-box{
         @include my-flex(space-between, column, center);
         padding: 10px 5px;
-        height: 70px;
+        height: 60px;
         width: 70px;
         border-radius: 5px;
         color: $secondaryIconColor;
         font-weight: 800;
         margin: 5px 0;
         .side-bar-icon{
-            font-size: 25px;
+            font-size: 20px;
         }
         .side-bar-name{
             font-size: 10px;
@@ -23,7 +23,7 @@
             color: $primaryIconColor;
         }
         &:hover{
-            color: $primaryIconColor;
+            background-color: $secondaryBack;
         }
     }
 }
