--- a/src/Components/CardNews/card-news.scss
+++ b/src/Components/CardNews/card-news.scss
@@ -16,7 +16,19 @@
         background-size: cover;
         border-radius: 5px 5px 0 0;
         text-align: right;
-        @include my-flex(flex-end, row, normal);
+        @include my-flex(space-between, row, normal);
+        .ad-holdere{
+            @include my-flex(center, column, center);
+            height: 25px;
+            width: 25px;
+            border-radius: 4px;
+            font-size: 10px;
+            background-color: red;
+            padding: 4px 5px;
+            font-weight: 700;
+            color: $secondaryBack;
+            margin: 19px 20px;
+        }
         .image-star-holder{
             background-color: $secondaryBack;
             height: 40px;
