--- a/src/Components/CardNews/card-news.scss
+++ b/src/Components/CardNews/card-news.scss
@@ -2,15 +2,15 @@
 @import '../../Assets/Scss/mixins.scss';
 
 .card-news-box{
-    min-width: 320px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     cursor: pointer;
     transition: $transition;
+    height: 325px;
     &:hover{
         box-shadow: rgba(0, 0, 0, 0.24) 10px 3px 8px;
     }
     .box-image{
-        height: 160px;
+        height: 60%;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -27,19 +27,23 @@
             padding: 4px 5px;
             font-weight: 700;
             color: $secondaryBack;
-            margin: 19px 20px;
+            margin: 15px 15px;
         }
-        .image-star-holder{
-            background-color: $secondaryBack;
-            height: 40px;
-            width: 40px;
-            border-radius: 0 5px 0 5px;
+        .favorite-holder{
             @include my-flex(center, column, center);
-            // box-shadow: -1px 1px 1px 1px $primaryIconColor;
-            .image-star{
-                font-size: 1.5rem;
-                color: $primaryIconColor;
-                cursor: pointer;
+            height: 30px;
+            width: 30px;
+            border-radius: 4px;
+            background-color: $secondaryBack;
+            padding: 1px;
+            font-weight: 700;
+            color: red;
+            margin: 15px 15px;
+            .heart{
+                transition: $transition;
+                &:hover{
+                    transform: scale(1.3);
+                }
             }
         }
         .remove-favorite{
@@ -53,7 +57,7 @@
         }
     }
     .box-info{
-        min-height: 140px;
+        height: 40%;
         @include my-flex(space-between, column, normal);
         background-color: $secondaryBack;
         padding: 10px;
@@ -76,8 +80,7 @@
         }
     }
     .news-breaking{
-        min-width: 320px;
-        height: 300px;
+        height: 100%;
         background-color: #1D1D1B;
         border-radius: 5px;
         color: $secondaryBack;
