--- a/src/Pages/Home/home.scss
+++ b/src/Pages/Home/home.scss
@@ -15,12 +15,18 @@
             width: 95%;
             grid-auto-columns: 33.3%;
             gap: 20px;
+            .content-cards-news{
+                min-width: 320px;
+                max-width: 500px;
+            }
             .content-title{
                 grid-column: span 3;
                 margin: 5px 0;
                 text-transform: capitalize;
             }
             .content-latest{
+                min-width: 320px;
+                max-width: 500px;
                 grid-row: span 2;
                 grid-column: 3 / 4;
             }
