--- a/src/Components/Favorite/favorite.scss
+++ b/src/Components/Favorite/favorite.scss
@@ -1,8 +1,17 @@
 @import '../../Assets/Scss/variables.scss';
 @import '../../Assets/Scss/mixins.scss';
 
-.favorite-w{
-    .content-empty-favorite{
-        color: red;
+.content-empty-favorite{
+    @include my-flex(center, column, center);
+    height: 50vh;
+    .empty-favorite-text{
+        margin: 30px;
+        color: $primaryIconColor;
+        font-size: 1.2rem;
+        font-weight: 700;
+    }
+    .empty-favorite-btn{
+        margin: 30px;
+        @include my-button($primaryIconColor, $secondaryBack);
     }
 }
