--- a/src/Pages/Home/home.scss
+++ b/src/Pages/Home/home.scss
@@ -4,31 +4,26 @@
 .home-w{
     @include my-container;
     .home-content{
-        padding: 20px 0;
+        margin: 20px 0;
         @include my-flex(space-between, row, normal);
-        .home-cotent-sidebar{
-            width: 5%;
+        gap: 15px;
+        flex-wrap: nowrap;
+        .home-sidebar{
+            @include my-flex(flex-start, column, normal);
         }
-        .home-cotent-cards{
-            padding: 0 20px;
-            display: grid;
-            width: 95%;
-            grid-auto-columns: 33.3%;
-            gap: 20px;
-            .content-cards-news{
-                min-width: 320px;
-                max-width: 500px;
-            }
-            .content-title{
-                grid-column: span 3;
-                margin: 5px 0;
+        .home-main{
+            flex: auto;
+            .main-content-title{
+                margin-bottom: 10px;
                 text-transform: capitalize;
             }
-            .content-latest{
-                min-width: 320px;
-                max-width: 500px;
-                grid-row: span 2;
-                grid-column: 3 / 4;
+            .main-content-cards{
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                gap: 20px;
+                .content-latest{
+                    grid-row: span 2;
+                }
             }
         }
     }
