--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -2,8 +2,14 @@
 @import '../../Assets/Scss/mixins.scss';
 
 .header-w{
-    // background-color: green;
     padding: 30px;
     @include my-flex(flex-start, row, center);
     border-bottom: 1px solid #97979741;
+}
+
+@media screen and (max-width: 576px){
+    .header-w{
+        padding: 10px 0px;
+        @include my-flex(flex-start, column, normal);
+    }
 }
