top navigation and hamburger menu

--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -5,11 +5,12 @@
     padding: 30px;
     @include my-flex(flex-start, row, center);
     border-bottom: 1px solid #97979741;
-}
+} 
 
 @media screen and (max-width: 576px){
     .header-w{
         padding: 10px 0px;
         @include my-flex(flex-start, column, normal);
+        border: none;
     }
 }
