--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@ a{
 }
 *{
     scrollbar-width: thin;
-    scrollbar-color: $secondaryIconColor $primaryIconColor;
+    scrollbar-color: $secondaryIconColor $secondaryBack;
 }
 //Chrome scrool
 *::-webkit-scrollbar {
