--- a/src/Components/HamburgerMenu/hamburger-menu.scss
+++ b/src/Components/HamburgerMenu/hamburger-menu.scss
@@ -2,6 +2,7 @@
 @import '../../Assets/Scss/mixins.scss';
 
 .hamburger-menu-w{
+    display: none;
     background-color: $primaryBack;
     position: fixed;
     top: 0;
@@ -10,7 +11,6 @@
     width: 100vw;
     z-index: 90;
     padding: 20px;
-    @include my-flex(flex-start, column, center);
     .hamburger-close-w{
         width: 100%;
         text-align: right;
@@ -24,5 +24,17 @@
     }
     .hamburger-nav{
         @include my-flex(center, row, center);
+        .side-bar-box{
+            margin: 5px;
+            &.active{
+                box-shadow: 0px 6px 36px rgba(0, 0, 0, 0.16);
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 576px){
+    .hamburger-menu-w{
+        @include my-flex(flex-start, column, center);
     }
 }
