--- a/src/Pages/Home/home.scss
+++ b/src/Pages/Home/home.scss
@@ -27,7 +27,7 @@
             }
             .home-top-nav{
                 display: none;
-                margin: 20px 0;
+                margin-bottom: 15px;
                 .top-nav-btn{
                     font-size: 16px;
                     font-weight: 600;
@@ -49,6 +49,7 @@
     .home-w{
         width: 90%;
         .home-content{
+            margin: 0px;
             .home-sidebar{
                 display: none;
             }
