--- a/src/Assets/Scss/mixins.scss
+++ b/src/Assets/Scss/mixins.scss
@@ -22,3 +22,32 @@
     width: 80%;
     margin: 0 auto;
 }
+
+$breakpoints: (
+    small: 576px,
+    medium: 768px,
+    large: 992px,
+    extra-large: 1200px
+);
+
+@mixin my-responsive($breakpoint) {
+    @if $breakpoint == small {
+        @media (max-width: map-get($breakpoints, small)) {
+            @content;
+        }
+    } @else if $breakpoint == medium {
+        @media (min-width: map-get($breakpoints, small)) and (max-width: map-get($breakpoints, medium)) {
+            @content;
+        }
+    } @else if $breakpoint == large {
+        @media (min-width: map-get($breakpoints, medium)) and (max-width: map-get($breakpoints, large)) {
+            @content;
+        }
+    } @else if $breakpoint == extra-large {
+        @media (min-width: map-get($breakpoints, large)) {
+            @content;
+        }
+    } @else {
+        @error "Pogresan unos parametra #{$breakpoint}.";
+    }
+}
