--- a/src/Components/CardNews/card-news.scss
+++ b/src/Components/CardNews/card-news.scss
@@ -8,6 +8,9 @@
     height: 325px;
     &:hover{
         box-shadow: rgba(0, 0, 0, 0.24) 10px 3px 8px;
+        .box-image{
+            filter: brightness(100%);
+        }
     }
     .box-image{
         height: 60%;
@@ -16,6 +19,8 @@
         background-size: cover;
         border-radius: 5px 5px 0 0;
         text-align: right;
+        filter: brightness(80%);
+        transition: $transition;
         @include my-flex(space-between, row, normal);
         .ad-holdere{
             @include my-flex(center, column, center);
@@ -101,6 +106,14 @@
         }
         .breaking-publisher{
             text-transform: capitalize;
+        }
+    }
+}
+
+@include my-responsive(small){
+    .card-news-box{
+        .box-image{
+            filter: brightness(100%);
         }
     }
 }
