--- a/src/Components/LatestNews/latest-news.scss
+++ b/src/Components/LatestNews/latest-news.scss
@@ -9,6 +9,7 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     cursor: pointer;
     transition: $transition;
+    position: relative;
     &:hover{
         box-shadow: rgba(0, 0, 0, 0.24) 10px 3px 8px;
     }
