--- a/src/Components/LoaderMini/loader-mini.scss
+++ b/src/Components/LoaderMini/loader-mini.scss
@@ -5,6 +5,14 @@
     @include my-flex(center,column, center);
     user-select: none;
     padding: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 90;
+    background-color: rgba(0, 0, 0, .15);
+    border-radius: 5px;
     .loader-shape{
         width: 54px;
         height: 54px;
@@ -12,7 +20,7 @@
         border-top: 4px solid rgba(247, 55, 17, 1);
         border-left: 4px solid rgba(247, 54, 17, 1);
         border-right: 4px solid rgba(247, 54, 17, 0);
-        animation: spin 0.5s infinite linear;
+        animation: spin 0.8s infinite linear;
         @keyframes spin {
             to{
                 transform: rotate(360deg);
