--- a/src/Components/LatestNews/latest-news.scss
+++ b/src/Components/LatestNews/latest-news.scss
@@ -44,6 +44,7 @@
         }
     }
     .latest-news-content{
+        min-height: 150px;
         max-height: 580px;
         overflow-y: scroll;
         padding: 0 5px;
