--- a/src/Components/CardNews/card-news.scss
+++ b/src/Components/CardNews/card-news.scss
@@ -6,6 +6,7 @@
     cursor: pointer;
     transition: $transition;
     height: 325px;
+    border-radius: 5px;
     &:hover{
         box-shadow: rgba(0, 0, 0, 0.24) 10px 3px 8px;
         .box-image{
