--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -14,3 +14,21 @@
         border: none;
     }
 }
+
+@include my-responsive(medium){
+    .header-w{
+        padding: 15px 0px;
+        @include my-flex(center, column, center);
+        gap: 20px;
+        border: none;
+    }
+}
+
+@include my-responsive(large){
+    .header-w{
+        padding: 15px 0px;
+        @include my-flex(center, column, center);
+        gap: 20px;
+        border: none;
+    }
+}
