--- a/src/Pages/Home/home.scss
+++ b/src/Pages/Home/home.scss
@@ -53,7 +53,7 @@
 
 @include my-responsive(small){
     .home-w{
-        width: 90%;
+        width: 95%;
         .home-content{
             margin: 0px;
             .home-sidebar{
@@ -61,6 +61,9 @@
             }
             .home-main{
                 .main-content-title{
+                    font-size: .9rem;
+                }
+                .hide-title{
                     display: none;
                 }
                 .main-content-cards{
@@ -71,6 +74,40 @@
                 }
                 .home-top-nav{
                     @include my-flex(center, row, center);
+                }
+            }
+        }
+    }
+}
+
+@include my-responsive(medium){
+    .home-w{
+        width: 90%;
+        .home-content{
+            margin: 10px 0px;
+            .home-main{
+                .main-content-title{
+                    font-size: .9rem;
+                }
+                .main-content-cards{
+                    grid-template-columns: repeat(2, 1fr);
+                }
+            }
+        }
+    }
+}
+
+@include my-responsive(large){
+    .home-w{
+        width: 90%;
+        .home-content{
+            margin: 15px 0px;
+            .home-main{
+                .main-content-title{
+                    font-size: 1rem;
+                }
+                .main-content-cards{
+                    grid-template-columns: repeat(2, 1fr);
                 }
             }
         }
